--- a/enforcerrule/pom.xml
+++ b/enforcerrule/pom.xml
@@ -4,23 +4,41 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <parent>
     <groupId>de.codesourcery.versiontracker</groupId>
     <artifactId>versiontracker-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <artifactId>versiontracker-enforcerrule</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <name>versiontracker-enforcerrule</name>
   <dependencies>
     <dependency>
       <groupId>de.codesourcery.versiontracker</groupId>
       <artifactId>versiontracker-common</artifactId>
+      <classifier>${myclassifier}</classifier>
     </dependency>
     <dependency>
       <groupId>de.codesourcery.versiontracker</groupId>
       <artifactId>versiontracker-client</artifactId>
+      <classifier>${myclassifier}</classifier>
     </dependency>
 
     <!-- Maven dependencies -->
-
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+    </dependency>
+    <!-- other stuff -->
     <dependency>
       <groupId>org.apache.maven.enforcer</groupId>
       <artifactId>enforcer-api</artifactId>
