--- a/example/pom.xml
+++ b/example/pom.xml
@@ -50,7 +50,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
             <dependency>
               <groupId>de.codesourcery.versiontracker</groupId>
               <artifactId>versiontracker-enforcerrule</artifactId>
-              <version>0.0.1-SNAPSHOT</version>
+              <version>0.0.1</version>
+              <classifier>jdk9</classifier> <!-- obviously depends on your JDK version -->
             </dependency>
           </dependencies>
       </plugin>
