Added support for running the enforcer rule locally (=no servlet needed),just omit the 'apiEndpoint' configuration if you want to do this.

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -53,7 +53,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <configuration>
           <rules>
             <dependencyAgeRule implementation="de.codesourcery.versiontracker.enforcerrule.DependencyAgeRule">
-              <apiEndpoint>http://localhost:8080/versiontracker-server/test</apiEndpoint>
+              <!-- <apiEndpoint>http://localhost:8080/versiontracker-server/test</apiEndpoint> -->
               <warnAge>4d</warnAge>
               <maxAge>2m</maxAge>
               <debug>false</debug>
