--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,17 @@
         <myclassifier>jdk9</myclassifier>
       </properties>
       <build>
+
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <excludes>
+          <exclude>rebel.xml</exclude>
+          <exclude>**/rebel.xml</exclude>
+        </excludes>
+      </resource>
+    </resources>
+
         <pluginManagement>
            <plugins>
             <plugin>
