Servlet now implements contextDestroyed() so artifact metadata gets flushed properly on context shutdown, bumped version to 0.0.2

--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,11 @@
 
   <display-name>versiontracker</display-name>
 
+  <!-- Listener needed to make sure we flush in-memory artifact metadata to disk when the servlet is reloaded -->
+  <listener>
+    <listener-class>de.codesourcery.versiontracker.server.APIImplDestructionListener</listener-class>
+  </listener>
+  
   <!-- Servlets -->
   <servlet>
     <servlet-name>api-servlet</servlet-name>
