--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.codesourcery.versiontracker</groupId>
   <artifactId>versiontracker-parent</artifactId>
-  <version>0.0.6</version>
+  <version>0.0.7-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>versiontracker-parent</name>
   <url>https://github.com/toby1984/maven-dependency-version-enforcer</url>
@@ -132,6 +132,28 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       </build>
     </profile>
   </profiles>
+  <distributionManagement>
+
+    <repository>
+      <id>voipfuture-releases</id>
+      <uniqueVersion>false</uniqueVersion>
+      <name>voipfuture-releases</name>
+      <url>http://artifactory.voipfuture.com/artifactory/libs-release-local</url>
+    </repository>
+
+    <snapshotRepository>
+      <id>voipfuture-snapshots</id>
+      <uniqueVersion>true</uniqueVersion>
+      <name>voipfuture-snapshots</name>
+      <url>http://artifactory.voipfuture.com/artifactory/libs-snapshot-local</url>
+    </snapshotRepository>
+
+    <site>
+      <id>dummy.website</id>
+      <name>Dummy Website</name>
+      <url>file:///tmp/cloudportal</url>
+    </site>
+  </distributionManagement>
   <licenses>
     <license>
       <name>Apache License, Version 2.0</name>
@@ -154,25 +176,25 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       <dependency>
         <groupId>de.codesourcery.versiontracker</groupId>
         <artifactId>versiontracker-common</artifactId>
-        <version>0.0.6</version>
+        <version>0.0.7-SNAPSHOT</version>
         <classifier>${myclassifier}</classifier>
       </dependency>
       <dependency>
         <groupId>de.codesourcery.versiontracker</groupId>
         <artifactId>versiontracker-client</artifactId>
-        <version>0.0.6</version>
+        <version>0.0.7-SNAPSHOT</version>
         <classifier>${myclassifier}</classifier>
       </dependency>
       <dependency>
         <groupId>de.codesourcery.versiontracker</groupId>
         <artifactId>versiontracker-server</artifactId>
-        <version>0.0.6</version>
+        <version>0.0.7-SNAPSHOT</version>
         <classifier>${myclassifier}</classifier>
       </dependency>
       <dependency>
         <groupId>de.codesourcery.versiontracker</groupId>
         <artifactId>versiontracker-enforcerrule</artifactId>
-        <version>0.0.6</version>
+        <version>0.0.7-SNAPSHOT</version>
         <classifier>${myclassifier}</classifier>
       </dependency>
       <!-- used by all sub-modules-->
