--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       <url>file:///tmp/cloudportal</url>
     </site>
   </distributionManagement>
+
+  <scm>
+      <developerConnection>scm:git:git@github.com:toby1984/maven-dependency-version-enforcer.git</developerConnection>
+      <tag>HEAD</tag>
+  </scm>
+
   <licenses>
     <license>
       <name>Apache License, Version 2.0</name>
