--- a/pom.xml
+++ b/pom.xml
@@ -295,7 +295,8 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version> <!-- Must be 2.5.2 because of https://issues.apache.org/jira/browse/MINSTALL-151 , this is the last plugin version that works correctly... -->
+          <version>2.5.2</version>
+          <!-- Must be 2.5.2 because of https://issues.apache.org/jira/browse/MINSTALL-151 , this is the last plugin version that works correctly... -->
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -315,7 +316,14 @@
         <plugin>
           <groupId>org.jvnet.jaxb2.maven2</groupId>
           <artifactId>maven-jaxb2-plugin</artifactId>
-          <version>0.13.3</version>
+          <version>0.14.0</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.glassfish.jaxb</groupId>
+              <artifactId>jaxb-runtime</artifactId>
+              <version>2.3.3</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
